# spectral-unmixing

./: .gitignore  01_04_2026_LF_mu_s_x10.csv  AGENT.md  AGENTS.md  README.md  context.md  plan.md  progress.md  pyproject.toml  requirements.txt  run.sh  spectral-unmixing.spec  spectral_unmixing.md  test_background_value_update.py  test_chromophore_map_update.py  test_real_data_background.py
.github/: CODEOWNERS
app/: __init__.py  main.py
data/: bilirubin_data.csv  leds_emission.csv  melanin_data.csv  oxyhemoglobin_data.csv  penetration_depth_digitized.csv
features/: background_model_research.md  bilirubin_index_calibration.md  custom_data_folder_support.md  kubelka_munk_implementation_plan.md  kubelka_munk_solver.md  nnls.md  pyside6_parity_checklist.md  pyside6_parity_evidence.md  pyside6_ui_rewrite_plan.md  spectral_unmixing.md
research-reports/: bilirubin-index-calibration-ui-design.md  bilirubin-index-gui-plan.md  bilirubin-index-postchange-review.md  bilirubin_index_report.csv  blb-alternatives.md  diffusion-models.md  forward-calibration-plan.md  km-equations-implementation.md  km-implementation-context.md  km-implementation-review.md  km-meta-prompt.md  km-model-decision-memo.md  km-next-decision-plan.md  km-phantom-validation-context.md  km-postfix-review.md  km-sensitivity-analysis-plan.md  km-sensitivity-script-review.md  km-staged-implementation-plan.md  km_sensitivity_full.csv  km_sensitivity_quick.csv  lipofundin-hb-bilirubin-phantoms.md  local-integration-context.md  two-band-bilirubin-index-plan.md
scripts/: bilirubin_index_report.py  km_sensitivity_scan.py
tests/: README.md  (+22 more)
(+34 files in other folders)
