[project]
name = "spectral-unmixing"
version = "0.2.5"
description = "A biomedical hyperspectral unmixing application"
authors = [
    { name = "mkuziuk", email = "mikhail.kuzyuk@gmail.com" }
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "PySide6",
    "pillow",
    "rawpy"
]
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
spectral-unmixing = "app.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
